update index 25/10 devSon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 <body>
 
     <!-- HEADER -->
-    <header></header>
+    <header>
+        <div>sdasdsad</div>
+    </header>
 
     <!-- CAROUSEL -->
     <section class="carousel"></section>
