update carousel 25/10 devCuong

--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
 
 <body>
 
-    <!-- HEADER -->
+    <!-- HEADER devTrung -->
     <header></header>
 
-    <!-- CAROUSEL -->
-    <section class="carousel"></section>
+    <!-- CAROUSEL devTrung-->
+    <section class="carousel">
+        <h2>Hello world</h2>
+        <h2>hi world</h2>
+    </section>
 
-    <!-- TOOLS -->
+    <!-- TOOLS devTrung -->
     <section class="tools"></section>
 
     <!-- ABOUT US -->
