update index.html  25/10 devSon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </section>
 
     <!-- TOOLS devTrung -->
-    <section class="tools"></section>
+    <section class="tools">
+        <div>111234576</div>
+    </section>
 
     <!-- ABOUT US -->
     <section class="aboutUs"></section>
