--- a/index.html
+++ b/index.html
@@ -45,7 +45,25 @@
     </section>
 
     <!-- ABOUT US -->
-    <section class="aboutUs"></section>
+    <section class="aboutUs py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-6 book-info pr-md-5">
+                    <h6 class="sub-title">ABOUT OUR COMPANY</h6>
+                    <h3 class="book-info mb-md-4 mb-3">The Best Choice For Your Successful Business!</h3>
+                    <p class="mb-md-5 mb-4">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et est repellendus illum harum quam nihil totam
+                        reprehenderit! Ut sed eveniet quos! Asperiores officia, repudiandae similique reiciendis, ab est magnam esse nesciunt ea fuga facere
+                        voluptatem.
+                    </p>
+                    <a href="#URL" class="btn btn-primary">Read More</a>
+                </div>
+                <div class="col-6">
+                    <img src="./img/about.jpg" class="img-fluid shadow img-curve" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- COUNT -->
     <section class="count"></section>
