--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     </section>
 
     <!-- ABOUT US -->
-    <section class="aboutUs py-5">
+    <section class="aboutUs py-5 pt-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-6 book-info pr-md-5">
+                <div class="col-sm-6 book-info pr-md-5">
                     <h6 class="sub-title">ABOUT OUR COMPANY</h6>
                     <h3 class="book-info mb-md-4 mb-3">The Best Choice For Your Successful Business!</h3>
                     <p class="mb-md-5 mb-4">
@@ -58,7 +58,7 @@
                     </p>
                     <a href="#URL" class="btn btn-primary">Read More</a>
                 </div>
-                <div class="col-6">
+                <div class="col-sm-6 pl-lg-5 mt-lg-0 mt-5">
                     <img src="./img/about.jpg" class="img-fluid shadow img-curve" alt="">
                 </div>
             </div>
