--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                     <h6 class="sub-title">ABOUT OUR COMPANY</h6>
                     <h3 class="book-info mb-md-4 mb-3">The Best Choice For Your Successful Business!</h3>
                     <p class="mb-md-5 mb-4">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et est repellendus illum harum quam nihil totam
-                        reprehenderit! Ut sed eveniet quos! Asperiores officia, repudiandae similique reiciendis, ab est magnam esse nesciunt ea fuga facere
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et est repellendus illum harum quam
+                        nihil totam
+                        reprehenderit! Ut sed eveniet quos! Asperiores officia, repudiandae similique reiciendis, ab est
+                        magnam esse nesciunt ea fuga facere
                         voluptatem.
                     </p>
                     <a href="#URL" class="btn btn-primary">Read More</a>
@@ -71,25 +73,25 @@
             <div class="row count-con justify-content-center">
                 <div class="col-lg-4 col-sm-6">
                     <div class="count_info counter_grid">
-                      <h4>Happy Customers</h4>
-                      <p class="counter">10458</p>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
+                        <h4>Happy Customers</h4>
+                        <p class="counter">10458</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
                     </div>
-                  </div>
-                  <div class="col-lg-4 col-sm-6 mt-sm-0 mt-4">
+                </div>
+                <div class="col-lg-4 col-sm-6 mt-sm-0 mt-4">
                     <div class="count_info counter_grid">
-                      <h4>Winning Awards</h4>
-                      <p class="counter">890</p>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
+                        <h4>Winning Awards</h4>
+                        <p class="counter">890</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
                     </div>
-                  </div>
-                  <div class="col-lg-4 col-sm-6 mt-lg-0 mt-sm-5 mt-4">
+                </div>
+                <div class="col-lg-4 col-sm-6 mt-lg-0 mt-sm-5 mt-4">
                     <div class="count_info counter_grid">
-                      <h4>Completed Projects</h4>
-                      <p class="counter">5345</p>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
+                        <h4>Completed Projects</h4>
+                        <p class="counter">5345</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
     </section>
@@ -101,7 +103,158 @@
     <section class="questions"></section>
 
     <!-- FEATURE -->
-    <section class="feature"></section>
+    <section class="feature py-5 mb-4">
+        <div class="container py-lg-3">
+            <div class="title text-center">
+                <h6>Featured Cases</h6>
+                <h3>Completed Projects</h3>
+                <p class="my-3">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+                    Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+            <!--? screeen for min width>= 769px(this is a big screen) -->
+            <div class="feature__project col-lg-10 mx-auto">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#project-one"
+                            type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Project
+                            One</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#project-two"
+                            type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Project
+                            Two</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#project-three"
+                            type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Project
+                            Three</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane active" id="project-one">
+                        <div class="project__item row">
+                            <div class="item__left col-md-6">
+                                <h3>Why a visual identity system is more memorable</h3>
+                                <p>
+                                    Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                    nulla quibusdam repellendus. consequatur minus aliquam corrupti blanditiis,
+                                    necessitatibus consectetur modi ipsum natus accusantium sit pariatur. </p>
+                                <button class="btn">KNOW MORE</button>
+                            </div>
+                            <div class="item__right col-md-6 mt-md-0 mt-5">
+                                <img src="./img/b4.jpg" alt="" class="img-fluid rounded-2">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="project-two">
+                        <div class="project__item row">
+                            <div class="item__left col-md-6">
+                                <img src="./img/b5.jpg" alt="" class="img-fluid rounded-2">
+                            </div>
+                            <div class="item__right col-md-6 mt-md-0 mt-5">
+                                <h3>Make website that looks Lorem, ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                    nulla
+                                    quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                                    consectetur modi ipsum natus accusantium sit pariatur.</p>
+                                <button class="btn">KNOW MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="project-three">
+                        <div class="project__item row">
+                            <div class="item__left col-md-6">
+                                <h3>Make website that looks Lorem, ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                    nulla
+                                    quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                                    consectetur modi ipsum natus accusantium sit pariatur.</p>
+                                <button class="btn">KNOW MORE</button>
+                            </div>
+                            <div class="item__right col-md-6 mt-md-0 mt-5">
+                                <img src="./img/b6.jpg" alt="" class="img-fluid rounded-2">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--? screeen for max width < 769px(this is a small screen) -->
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-featureCollapseOne" aria-expanded="false"
+                            aria-controls="flush-collapseOne">
+                            Project One
+                        </button>
+                    </h2>
+                    <div id="flush-featureCollapseOne" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="project__item row">
+                            <div class="item__left col-md-6">
+                                <h3>Why a visual identity system is more memorable</h3>
+                                <p>Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                    nulla
+                                    quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                                    consectetur modi ipsum natus accusantium sit pariatur.</p>
+                                <button class="btn">KNOW MORE</button>
+                            </div>
+                            <div class="item__right col-md-6 mt-md-0 mt-5">
+                                <img src="./img/b4.jpg" alt="" class="img-fluid rounded-2">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#featureCollapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Project Two
+                        </button>
+                    </h2>
+                    <div id="featureCollapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="project__item row">
+                            <div class="item__left col-md-6">
+                                <img src="./img/b5.jpg" alt="" class="img-fluid rounded-2">
+                            </div>
+                            <div class="item__right col-md-6 mt-md-0 mt-5">
+                                <h3>Make website that looks Lorem, ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                    nulla
+                                    quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                                    consectetur modi ipsum natus accusantium sit pariatur.</p>
+                                <button class="btn">KNOW MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#featureCollapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Project Three
+                        </button>
+                    </h2>
+                    <div id="featureCollapseThree" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionExample">
+                        <div class="project__item row">
+                            <div class="item__left col-md-6">
+                                <h3>Make website that looks Lorem, ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                    nulla
+                                    quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                                    consectetur modi ipsum natus accusantium sit pariatur.</p>
+                                <button class="btn">KNOW MORE</button>
+                            </div>
+                            <div class="item__right col-md-6 mt-md-0 mt-5">
+                                <img src="./img/b6.jpg" alt="" class="img-fluid rounded-2">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- CLIENTS -->
     <section class="clients"></section>
