Complete feature devCuong 28/10

--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-featureCollapseOne" aria-expanded="false"
-                            aria-controls="flush-collapseOne">
+                            data-bs-target="#featureCollapseOne" aria-expanded="false"
+                            aria-controls="collapseOne">
                             Project One
                         </button>
                     </h2>
-                    <div id="flush-featureCollapseOne" class="accordion-collapse collapse"
+                    <div id="featureCollapseOne" class="accordion-collapse collapse"
                         data-bs-parent="#accordionFlushExample">
                         <div class="project__item row">
                             <div class="item__left col-md-6">
