--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#featureCollapseOne" aria-expanded="false"
-                            aria-controls="collapseOne">
+                            data-bs-target="#featureCollapseOne" aria-expanded="false" aria-controls="collapseOne">
                             Project One
                         </button>
                     </h2>
@@ -256,7 +255,110 @@
     </section>
 
     <!-- CLIENTS -->
-    <section class="clients"></section>
+    <section class="clients pt-5">
+        <div class="container py-lg-3">
+            <div class="title text-center mx-auto">
+                <h6>Our Clients Testimonials </h6>
+                <h3>What People Say</h3>
+                <p class="my-3">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+                    Nulla mollis
+                    dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
+            <div class="clients__content row mt-4">
+                <div class="mx-auto col-md-12">
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <div class="item__bg mt-lg-4 mt-3 d-grid">
+                                <div class="img-circle">
+                                    <img src="./img/team3.jpg" class="img-fluid" alt="client image">
+                                </div>
+                                <div class="message">
+                                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis
+                                        deleniti
+                                        praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur
+                                        temporibus
+                                        quam obcaecati sapiente quaerat et. </p>
+                                    <div class="name mt-4">
+                                        <h4>
+                                            Isabella Mia </h4>
+                                        <p>
+                                            Company name </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item__bg mt-lg-4 mt-3 d-grid">
+                                <div class="img-circle">
+                                    <img src="./img/team4.jpg" class="img-fluid" alt="client image">
+                                </div>
+                                <div class="message">
+                                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis
+                                        deleniti
+                                        praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur
+                                        temporibus
+                                        quam obcaecati sapiente quaerat et. </p>
+                                    <div class="name mt-4">
+                                        <h4>
+                                            Benjamin Lucas </h4>
+                                        <p>
+                                            Company name </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item__bg mt-lg-4 mt-3 d-grid">
+                                <div class="img-circle">
+                                    <img src="./img/team5.jpg" class="img-fluid" alt="client image">
+                                </div>
+                                <div class="message">
+                                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis
+                                        deleniti
+                                        praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur
+                                        temporibus
+                                        quam obcaecati sapiente quaerat et. </p>
+                                    <div class="name mt-4">
+                                        <h4>Oliver Bradley</h4>
+                                        <p>
+                                            Company name </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item__bg mt-lg-4 mt-3 d-grid">
+                                <div class="img-circle">
+                                    <img src="./img/team6.jpg" class="img-fluid" alt="client image">
+                                </div>
+                                <div class="message">
+                                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis
+                                        deleniti
+                                        praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur
+                                        temporibus
+                                        quam obcaecati sapiente quaerat et. </p>
+                                    <div class="name mt-4">
+                                        <h4>William James</h4>
+                                        <p>
+                                            Company name </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- BUILD BRAND -->
     <section class="buildBrand"></section>
@@ -296,7 +398,7 @@
                     items: 2
                 },
                 1200: {
-                    items: 3
+                    items: 2
                 }
             }
         })
