--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!-- ABOUT US -->
     <section class="aboutUs py-5 pt-4">
-        <div class="container">
+        <div class="container py-lg-3 mt-3">
             <div class="row align-items-center">
                 <div class="col-sm-6 book-info pr-md-5">
                     <h6 class="sub-title">ABOUT OUR COMPANY</h6>
@@ -176,7 +176,22 @@
     </section>
 
     <!-- COMMITMENT -->
-    <section class="commitment"></section>
+    <section class="commitment">
+        <div class="new-block top-bottom">
+            <div class="container">
+              <div class="middle-section">
+                <div class="section-width">
+                  <h2>We are true to ourselves, and commit to always perform at our best.</h2>
+                </div>
+                <div class="link-list-menu">
+                  <p class="mt-md-4 mt-3 mb-md-5 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, doloribus atque. Corrupti exercitationem voluptatem ipsum iste consequuntur et vitae voluptas temporibus? Maxime dolores amet voluptatum illo consequatur placeat fugit ducimus.</p>
+                    <a href="#URL" class="btn btn-light theme-button">Read more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>gi
+    
 
     <!-- QUESTIONS -->
     <section class="questions"></section>
