--- a/index.html
+++ b/index.html
@@ -154,21 +154,21 @@
                     <div class="count_info counter_grid">
                         <h4>Happy Customers</h4>
                         <p class="counter">10458</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
+                        <p class="counter-x">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-sm-0 mt-4">
                     <div class="count_info counter_grid">
                         <h4>Winning Awards</h4>
                         <p class="counter">890</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
+                        <p class="counter-x">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-lg-0 mt-sm-5 mt-4">
                     <div class="count_info counter_grid">
                         <h4>Completed Projects</h4>
                         <p class="counter">5345</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
+                        <p class="counter-x">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere atque sed.</p>
                     </div>
                 </div>
             </div>
