--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@
 
     <!-- CAROUSEL devTrung-->
     <section class="carousel">
+        <div class="content">
+            <div class="container">
+              <div class="row align-items-center">
+                <div class="col-lg-6 content-left">
+                  <h3>We Execute Our Ideas 
+                    From Start to Finish 
+                  </h3>
+                  <p class="mt-3 mb-lg-5 mb-4">Building a beautiful interactive business for startups and innovative companies.</p>
+                  <a href="about.html" class="btn btn-outline-primary theme-button">Get Started</a>
+                </div>
+                <div class="col-lg-6 content-photo mt-lg-0 mt-5">
+                  <img src="./img/main.png" class="img-fluid" alt="main image">
+                </div>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
     </section>
 
     <!-- TOOLS devTrung -->
