--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </section>
 
     <!-- FEATURE -->
-    <section class="feature py-5 mb-4">
+    <section class="feature">
         <div class="container py-lg-3">
             <div class="title text-center">
                 <h6>Featured Cases</h6>
